Fixed spacing in mobile menu

--- a/src/Compnents2/CustomCSS/MobileMenu.css
+++ b/src/Compnents2/CustomCSS/MobileMenu.css
@@ -1,30 +1,17 @@
-.mobile-main-nav, #side-sub-menu {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    /* list-style: georgian; */
+
+
+
+.mobile-menu-wrapper{
+    height: auto;
+    
+}
+
+.btn-close-mobile-menu{
+    margin: 0;
     overflow: hidden;
+    height: 100%;
+}
+
+.menu-item.mobile{
     width: 100%;
-}
-
-
-@media only screen and (max-width: 768px) {
-    .mobile-main-nav, #side-sub-menu {
-        margin-top: 40px;
-        margin-bottom: 40px;
-        /* list-style: georgian; */
-        overflow: hidden;
-        width: 50%;
-    }
-    
-}
-
-@media only screen and (min-width: 768px) and (max-width:1024px) {
-    .mobile-main-nav, #side-sub-menu {
-        margin-top: 40px;
-        margin-bottom: 40px;
-        /* list-style: georgian; */
-        overflow: hidden;
-        width: 30%;
-    }
-    
 }
